--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
 
                   {% endfor %}
                   <li><a href="/">Home</a></li>
-                  <li><a href="http://docs.pennyphp.org/en/latest/">Documentation</a></li>
+                  <li><a href="http://docs.pennyphp.org/">Documentation</a></li>
                   <li><a href="https://github.com/ginarb/penny" target="_blank">Repository</a></li>
                   <li><a href="https://github.com/ginarb/penny-classic-app" target="_blank">Skeleton Application</a></li>
                 </ul>
