--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,6 +40,7 @@
         </div>
     </div>
 
+    <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
     <script src="{{ "/js/jquery/dist/jquery.js" | prepend: site.baseurl }}"></script>
     <script src="{{ "/js/bootstrap/dist/js/bootstrap.js" | prepend: site.baseurl }}"></script>
     <script>
