--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,6 +28,7 @@
 
                   {% endfor %}
                   <li><a href="/">Home</a></li>
+                  <li><a href="/blog/">Blog</a></li>
                   <li><a href="http://docs.pennyphp.org/">Documentation</a></li>
                   <li><a href="https://github.com/gianarb/penny" target="_blank">Repository</a></li>
                   <li><a href="https://github.com/gianarb/penny-classic-app" target="_blank">Skeleton Application</a></li>
