--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,6 +1,12 @@
 ---
 layout: default
 ---
+<style>
+.post {
+    text-align:left;
+}
+</style>
+
 <div class="post">
 
   <header class="post-header">
