--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,7 +4,15 @@
   <meta name="viewport" content="width=device-width initial-scale=1">
 
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
-  <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+  <meta name="description" content="{{ page.summary }}">
+
+    <meta property="og:title" content="{{ page.title }}" />
+    <meta property="og:site_name" content="penny php site framework middleware"/>
+    <meta property="og:url" content="{{site.MY_URL}}{{page.url}}" />
+    <meta property="og:description" content="{{ page.summary }}" />
+    <meta property="og:type" content="article" />
+    <meta property="og:locale" content="en_US" />
+    <meta property="og:image" content="{{site.url}}/img/pennyphp.png" />
 
   <link rel="stylesheet" href="{{ "/css/compiled.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
