--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,4 +18,18 @@ layout: default
     {{ content }}
   </article>
 
+    <div id="disqus_thread"></div>
+
 </div>
+
+<script>
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+
+s.src = '//pennyphp.disqus.com/embed.js';
+
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
+<noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript" rel="nofollow">comments powered by Disqus.</a></noscript>
