--- a/_includes/post_detail.html
+++ b/_includes/post_detail.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-12 single-post">
         <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
         <p>{{ post.summary }}</p>
         <p>by. <a href="{{ post.author_url }}" target="_blank">{{ post.author }}</a></p>
