--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,12 +19,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                   </button>
+                  <a class="navbar-brand" href="/"><img alt="Penny" src="/img/pennyphp.png" /></a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                   <ul class="nav navbar-nav">
-                      <li><a href="/">Home</a></li>
                       <li><a href="/blog/">Blog</a></li>
                       <li><a href="http://docs.pennyphp.org/">Documentation</a></li>
                       <li><a href="https://github.com/gianarb/penny" target="_blank">Repository</a></li>
