--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,10 +25,9 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                   <ul class="nav navbar-nav">
-                      <li><a href="/blog/">Blog</a></li>
-                      <li><a href="http://docs.pennyphp.org/">Documentation</a></li>
-                      <li><a href="https://github.com/gianarb/penny" target="_blank">Repository</a></li>
-                      <li><a href="https://github.com/gianarb/penny-classic-app" target="_blank">Skeleton Application</a></li>
+                      <li><a href="/blog/"><i class="fa fa-users"></i>  Blog</a></li>
+                      <li><a href="http://docs.pennyphp.org/"><i class="fa fa-file-text-o"></i> Documentation</a></li>
+                      <li><a href="https://github.com/gianarb/penny" target="_blank"><i class="fa fa-github"></i> GitHub</a></li>
                   </ul>
                 </div><!-- /.navbar-collapse -->
               </div><!-- /.container-fluid -->
@@ -41,6 +40,7 @@
     <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
     <script src="{{ "/js/jquery/dist/jquery.js" | prepend: site.baseurl }}"></script>
     <script src="{{ "/js/bootstrap/dist/js/bootstrap.js" | prepend: site.baseurl }}"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
