--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,6 +37,23 @@
         </div>
     </div>
 
+    <footer class="footer">
+      <div class="container">
+
+        <div class="row text-center">
+            <div class="col-md-12">
+                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                    <input type="hidden" name="cmd" value="_s-xclick">
+                    <input type="hidden" name="hosted_button_id" value="68JUJMXHCBK8U">
+                    <button type="button" class="btn btn-info" name="submit" alt="PayPal – The safer, easier way to pay online."><i class="fa fa-paypal"></i> Donate with PayPal</button>
+                    <img alt="" border="0" src="https://www.paypalobjects.com/it_IT/i/scr/pixel.gif" width="1" height="1">
+                </form>
+            </div>
+        </div>
+
+      </div>
+    </footer>
+
     <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
     <script src="{{ "/js/jquery/dist/jquery.js" | prepend: site.baseurl }}"></script>
     <script src="{{ "/js/bootstrap/dist/js/bootstrap.js" | prepend: site.baseurl }}"></script>
