Font size navbar

--- a/css/compiled.css
+++ b/css/compiled.css
@@ -6194,6 +6194,9 @@ span.post-tag.label.label-info {
 .navbar-brand img {
     height:45px;
 }
+.navbar-default .navbar-nav > li > a {
+    font-size: 1.5em;
+}
 footer {
     border-top: 1px solid #9999CC;
     padding-top:20px;
