--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                   <ul class="nav navbar-nav">
                       <li><a href="/blog/"><i class="fa fa-users"></i>  Blog</a></li>
-                      <li><a href="http://docs.pennyphp.org/"><i class="fa fa-file-text-o"></i> Documentation</a></li>
+                      <li><a href="http://pennyphp.org/penny"><i class="fa fa-file-text-o"></i> Documentation</a></li>
                       <li><a href="https://github.com/gianarb/penny" target="_blank"><i class="fa fa-github"></i> GitHub</a></li>
                   </ul>
                 </div><!-- /.navbar-collapse -->
